Convert hard-coded visualization to function, add function for hyperparameter tuning

--- a/3-simple-CNN-model.ipynb
+++ b/3-simple-CNN-model.ipynb
@@ -8,18 +8,18 @@
       ],
       "metadata": {
         "id": "IX8ptKk2zVdr",
-        "outputId": "636e6a53-93c8-4743-be9c-35148684a5f8",
+        "outputId": "1baec62e-f092-4757-f409-b9a7873a02f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "qs9Qmxb_zAbm"
       },
@@ -126,7 +126,7 @@
       "execution_count": 5,
       "metadata": {
         "id": "U_rRlYUdzAbu",
-        "outputId": "c5e14c08-37e7-4fba-a37a-9a2a59980d95",
+        "outputId": "b2680128-e6ac-480c-d2ac-23c58308b39d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -173,6 +173,32 @@
       "source": [
         "input_shape = (178, 178, 3)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define function to visualize results to determine if model is overfitting\n",
+        "def visualize_results(history):\n",
+        "  acc = history.history['accuracy']\n",
+        "  val_acc = history.history['val_accuracy']\n",
+        "  epochs = range(len(acc)) \n",
+        "  ax, fig = plt.subplots(figsize=(20, 4))\n",
+        "  plt.subplot(121)\n",
+        "  plt.plot(epochs, acc, 'r', \"Training Accuracy\")\n",
+        "  plt.plot(epochs, val_acc, 'b', \"Validation Accuracy\")\n",
+        "  plt.title('Training and validation accuracy')\n",
+        "  loss = history.history['loss']\n",
+        "  val_loss = history.history['val_loss']\n",
+        "  plt.subplot(122)\n",
+        "  plt.plot(epochs, loss, 'r', \"Training Loss\")\n",
+        "  plt.plot(epochs, val_loss, 'b', \"Validation Loss\")\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "ELdRaB4UF6YZ"
+      },
+      "execution_count": 11,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -243,27 +269,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualize the training & validation accuracy to determine if model is overfitting\n",
-        "acc = history.history['accuracy']\n",
-        "val_acc = history.history['val_accuracy']\n",
-        "\n",
-        "# Retrieve number of epochs\n",
-        "epochs = range(len(acc)) \n",
-        "\n",
-        "ax, fig = plt.subplots(figsize=(20, 4))\n",
-        "plt.subplot(121)\n",
-        "plt.plot(epochs, acc, 'r', \"Training Accuracy\")\n",
-        "plt.plot(epochs, val_acc, 'b', \"Validation Accuracy\")\n",
-        "plt.title('Training and validation accuracy')\n",
-        "\n",
-        "# Visualize the training & validation loss to determine if model is overfitting\n",
-        "loss = history.history['loss']\n",
-        "val_loss = history.history['val_loss']\n",
-        "\n",
-        "plt.subplot(122)\n",
-        "plt.plot(epochs, loss, 'r', \"Training Loss\")\n",
-        "plt.plot(epochs, val_loss, 'b', \"Validation Loss\")\n",
-        "plt.show()"
+        "visualize_results(history)"
       ],
       "metadata": {
         "id": "0zYHIvp21C_T",
@@ -360,28 +366,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualize the training & validation accuracy to determine if model is overfitting\n",
-        "acc = history.history['accuracy']\n",
-        "val_acc = history.history['val_accuracy']\n",
-        "\n",
-        "# Retrieve number of epochs\n",
-        "epochs = range(len(acc)) \n",
-        "\n",
-        "ax, fig = plt.subplots(figsize=(20, 4))\n",
-        "\n",
-        "plt.subplot(121)\n",
-        "plt.plot(epochs, acc, 'r', \"Training Accuracy\")\n",
-        "plt.plot(epochs, val_acc, 'b', \"Validation Accuracy\")\n",
-        "plt.title('Training and validation accuracy')\n",
-        "\n",
-        "# Visualize the training & validation loss to determine if model is overfitting\n",
-        "loss = history.history['loss']\n",
-        "val_loss = history.history['val_loss']\n",
-        "\n",
-        "plt.subplot(122)\n",
-        "plt.plot(epochs, loss, 'r', \"Training Loss\")\n",
-        "plt.plot(epochs, val_loss, 'b', \"Validation Loss\")\n",
-        "plt.show()"
+        "visualize_results(history)"
       ],
       "metadata": {
         "id": "ewh7mosZ3QvL",
@@ -480,27 +465,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualize the training & validation accuracy to determine if model is overfitting\n",
-        "acc = history.history['accuracy']\n",
-        "val_acc = history.history['val_accuracy']\n",
-        "\n",
-        "# Retrieve number of epochs\n",
-        "epochs = range(len(acc)) \n",
-        "\n",
-        "ax, fig = plt.subplots(figsize=(20, 4))\n",
-        "plt.subplot(121)\n",
-        "plt.plot(epochs, acc, 'r', \"Training Accuracy\")\n",
-        "plt.plot(epochs, val_acc, 'b', \"Validation Accuracy\")\n",
-        "plt.title('Training and validation accuracy')\n",
-        "\n",
-        "# Visualize the training & validation loss to determine if model is overfitting\n",
-        "loss = history.history['loss']\n",
-        "val_loss = history.history['val_loss']\n",
-        "\n",
-        "plt.subplot(122)\n",
-        "plt.plot(epochs, loss, 'r', \"Training Loss\")\n",
-        "plt.plot(epochs, val_loss, 'b', \"Validation Loss\")\n",
-        "plt.show()"
+        "visualize_results(history)"
       ],
       "metadata": {
         "id": "VV52Fb-y3Rhp",
@@ -540,6 +505,57 @@
     {
       "cell_type": "code",
       "source": [
+        "# Create function to personalize hyperparameters for the chosen architecture\n",
+        "def create_model(filter_1=32, filter_2=64, kernel=(3, 3), activation_conv='relu', neurons=512, activation_dense='relu', \\\n",
+        "                 optimizer=tf.keras.optimizers.RMSprop(learning_rate=0.001), loss=\"binary_crossentropy\", epochs=5):\n",
+        "  two_layer_model = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Conv2D(filter_1, kernel, input_shape=(178, 178, 3), activation=activation_conv),\n",
+        "    tf.keras.layers.MaxPool2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(filter_2, kernel, activation=activation_conv),\n",
+        "    tf.keras.layers.MaxPool2D(2, 2),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(neurons, activation=activation_dense),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "    ])\n",
+        "\n",
+        "  two_layer_model.compile(optimizer=optimizer,loss=loss, metrics=['accuracy'])\n",
+        "\n",
+        "  history = two_layer_model.fit(train_gen,\n",
+        "                      epochs=epochs,\n",
+        "                      verbose=1,\n",
+        "                      validation_data=val_gen)\n",
+        "  \n",
+        "  return history"
+      ],
+      "metadata": {
+        "id": "6fMcMvUKBSa_"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ekTGiJqWDRpG"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 3.2.0. Hyperparameter tuning with GridSearchCV (discarded because of runtime issues)"
+      ],
+      "metadata": {
+        "id": "T3lWWyTZBCx8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
         "from tqdm import tqdm\n",
         "from scikeras.wrappers import KerasClassifier\n",
@@ -548,7 +564,7 @@
       "metadata": {
         "id": "VvhgQ6Fh2q2e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -573,7 +589,7 @@
       "metadata": {
         "id": "5EvbkHxzC7h_"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +696,7 @@
       "metadata": {
         "id": "5zm6ZJMjJbdA"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +741,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +773,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,9 +816,20 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "BZVghFwCBQvZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "#### 3.2.1. Batch size & number of epochs"
+        "#### 3.2.1. Filter sizes"
       ],
       "metadata": {
         "id": "n8DQ6CR12j03"
@@ -811,7 +838,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "history = create_model(filter_1=16, filter_2=32)\n",
+        "visualize_results(history)"
       ],
       "metadata": {
         "id": "TTmIDeOa2iEC"
