Epoch number tuning & model training

--- a/3-simple-CNN-model.ipynb
+++ b/3-simple-CNN-model.ipynb
@@ -8,7 +8,7 @@
       ],
       "metadata": {
         "id": "IX8ptKk2zVdr",
-        "outputId": "1baec62e-f092-4757-f409-b9a7873a02f3",
+        "outputId": "6c53653c-3de2-411c-d18f-49d849e145ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -126,7 +126,7 @@
       "execution_count": 5,
       "metadata": {
         "id": "U_rRlYUdzAbu",
-        "outputId": "b2680128-e6ac-480c-d2ac-23c58308b39d",
+        "outputId": "7c01902e-11e3-4ff0-9282-ec6cc22a83cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "id": "jX_EAjo_zAbz"
       },
@@ -197,7 +197,7 @@
       "metadata": {
         "id": "ELdRaB4UF6YZ"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1976,7 +1976,7 @@
       "metadata": {
         "id": "KXDzXR1UaT35"
       },
-      "execution_count": 36,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -2004,10 +2004,70 @@
         "                    callbacks=callbacks)"
       ],
       "metadata": {
-        "id": "wilNo0N8coni"
+        "id": "wilNo0N8coni",
+        "outputId": "565e463d-e197-40dc-a4ee-fc3ab09a2d6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/30\n",
+            "29/29 [==============================] - 180s 6s/step - loss: 1.8955 - accuracy: 0.5471 - val_loss: 0.5883 - val_accuracy: 0.7887\n",
+            "Epoch 2/30\n",
+            "29/29 [==============================] - 27s 926ms/step - loss: 0.4754 - accuracy: 0.8011 - val_loss: 0.3637 - val_accuracy: 0.8380\n",
+            "Epoch 3/30\n",
+            "29/29 [==============================] - 27s 922ms/step - loss: 0.3466 - accuracy: 0.8366 - val_loss: 0.2959 - val_accuracy: 0.8662\n",
+            "Epoch 4/30\n",
+            "29/29 [==============================] - 27s 919ms/step - loss: 0.3042 - accuracy: 0.8668 - val_loss: 0.3013 - val_accuracy: 0.8803\n",
+            "Epoch 5/30\n",
+            "29/29 [==============================] - 27s 927ms/step - loss: 0.2582 - accuracy: 0.8952 - val_loss: 0.2310 - val_accuracy: 0.9014\n",
+            "Epoch 6/30\n",
+            "29/29 [==============================] - 27s 932ms/step - loss: 0.2258 - accuracy: 0.8934 - val_loss: 0.2254 - val_accuracy: 0.9085\n",
+            "Epoch 7/30\n",
+            "29/29 [==============================] - 27s 924ms/step - loss: 0.1894 - accuracy: 0.9378 - val_loss: 0.2046 - val_accuracy: 0.9225\n",
+            "Epoch 8/30\n",
+            "29/29 [==============================] - 27s 925ms/step - loss: 0.1603 - accuracy: 0.9432 - val_loss: 0.1787 - val_accuracy: 0.9366\n",
+            "Epoch 9/30\n",
+            "29/29 [==============================] - 27s 928ms/step - loss: 0.1445 - accuracy: 0.9467 - val_loss: 0.3057 - val_accuracy: 0.8803\n",
+            "Epoch 10/30\n",
+            "29/29 [==============================] - 27s 927ms/step - loss: 0.1225 - accuracy: 0.9609 - val_loss: 0.1595 - val_accuracy: 0.9155\n",
+            "Epoch 11/30\n",
+            "29/29 [==============================] - 27s 931ms/step - loss: 0.1069 - accuracy: 0.9538 - val_loss: 0.1555 - val_accuracy: 0.9437\n",
+            "Epoch 12/30\n",
+            "29/29 [==============================] - 27s 931ms/step - loss: 0.0964 - accuracy: 0.9663 - val_loss: 0.1645 - val_accuracy: 0.9296\n",
+            "Epoch 13/30\n",
+            "29/29 [==============================] - 27s 926ms/step - loss: 0.0797 - accuracy: 0.9751 - val_loss: 0.1958 - val_accuracy: 0.9085\n",
+            "Epoch 14/30\n",
+            "29/29 [==============================] - 27s 929ms/step - loss: 0.1103 - accuracy: 0.9645 - val_loss: 0.2203 - val_accuracy: 0.9014\n",
+            "Epoch 15/30\n",
+            "29/29 [==============================] - 27s 932ms/step - loss: 0.0822 - accuracy: 0.9716 - val_loss: 0.1375 - val_accuracy: 0.9507\n",
+            "Epoch 16/30\n",
+            "29/29 [==============================] - 27s 935ms/step - loss: 0.0609 - accuracy: 0.9822 - val_loss: 0.1479 - val_accuracy: 0.9366\n",
+            "Epoch 17/30\n",
+            "29/29 [==============================] - 27s 931ms/step - loss: 0.0466 - accuracy: 0.9858 - val_loss: 0.2036 - val_accuracy: 0.9155\n",
+            "Epoch 18/30\n",
+            "29/29 [==============================] - 27s 926ms/step - loss: 0.0492 - accuracy: 0.9858 - val_loss: 0.1665 - val_accuracy: 0.9507\n",
+            "Epoch 19/30\n",
+            "29/29 [==============================] - ETA: 0s - loss: 0.0480 - accuracy: 0.9929\n",
+            "Reached 99% accuracy so cancelling training!\n",
+            "29/29 [==============================] - 27s 933ms/step - loss: 0.0480 - accuracy: 0.9929 - val_loss: 0.1770 - val_accuracy: 0.9437\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We'll use the pair that has the highest accuracy, i.e. the pair at epoch 18, (98.6% training, 95.1% validation)."
+      ],
+      "metadata": {
+        "id": "O7qXGsdqCssC"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2023,10 +2083,95 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "model = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), input_shape=input_shape, activation='relu'),\n",
+        "    tf.keras.layers.MaxPool2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPool2D(2, 2),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(512, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer=tf.keras.optimizers.Adamax(learning_rate=0.001),\\\n",
+        "    loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "history = model.fit(train_gen,\n",
+        "                    epochs=18,\n",
+        "                    verbose=1,\n",
+        "                    validation_data=val_gen)"
       ],
       "metadata": {
-        "id": "yDFQN5rJc3Hc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yDFQN5rJc3Hc",
+        "outputId": "175f48a3-d8c2-4bb1-d558-35db9f0ccc4c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/18\n",
+            "29/29 [==============================] - 33s 1s/step - loss: 2.0443 - accuracy: 0.5613 - val_loss: 0.5434 - val_accuracy: 0.7324\n",
+            "Epoch 2/18\n",
+            "29/29 [==============================] - 28s 949ms/step - loss: 0.4979 - accuracy: 0.7762 - val_loss: 0.4103 - val_accuracy: 0.8169\n",
+            "Epoch 3/18\n",
+            "29/29 [==============================] - 28s 970ms/step - loss: 0.4021 - accuracy: 0.8171 - val_loss: 0.3778 - val_accuracy: 0.8380\n",
+            "Epoch 4/18\n",
+            "29/29 [==============================] - 28s 961ms/step - loss: 0.3426 - accuracy: 0.8508 - val_loss: 0.3260 - val_accuracy: 0.8380\n",
+            "Epoch 5/18\n",
+            "29/29 [==============================] - 28s 963ms/step - loss: 0.3235 - accuracy: 0.8615 - val_loss: 0.2940 - val_accuracy: 0.8662\n",
+            "Epoch 6/18\n",
+            "29/29 [==============================] - 29s 1s/step - loss: 0.2877 - accuracy: 0.8615 - val_loss: 0.4145 - val_accuracy: 0.8239\n",
+            "Epoch 7/18\n",
+            "29/29 [==============================] - 28s 961ms/step - loss: 0.2639 - accuracy: 0.8792 - val_loss: 0.2503 - val_accuracy: 0.8873\n",
+            "Epoch 8/18\n",
+            "29/29 [==============================] - 28s 955ms/step - loss: 0.2120 - accuracy: 0.9112 - val_loss: 0.2720 - val_accuracy: 0.8944\n",
+            "Epoch 9/18\n",
+            "29/29 [==============================] - 28s 956ms/step - loss: 0.1997 - accuracy: 0.9272 - val_loss: 0.2276 - val_accuracy: 0.9085\n",
+            "Epoch 10/18\n",
+            "29/29 [==============================] - 28s 960ms/step - loss: 0.1681 - accuracy: 0.9343 - val_loss: 0.2423 - val_accuracy: 0.8944\n",
+            "Epoch 11/18\n",
+            "29/29 [==============================] - 28s 953ms/step - loss: 0.1435 - accuracy: 0.9503 - val_loss: 0.2495 - val_accuracy: 0.8873\n",
+            "Epoch 12/18\n",
+            "29/29 [==============================] - 28s 954ms/step - loss: 0.1273 - accuracy: 0.9556 - val_loss: 0.2054 - val_accuracy: 0.9155\n",
+            "Epoch 13/18\n",
+            "29/29 [==============================] - 28s 955ms/step - loss: 0.1056 - accuracy: 0.9698 - val_loss: 0.2564 - val_accuracy: 0.8944\n",
+            "Epoch 14/18\n",
+            "29/29 [==============================] - 28s 959ms/step - loss: 0.0963 - accuracy: 0.9751 - val_loss: 0.1875 - val_accuracy: 0.9437\n",
+            "Epoch 15/18\n",
+            "29/29 [==============================] - 28s 959ms/step - loss: 0.0815 - accuracy: 0.9787 - val_loss: 0.2214 - val_accuracy: 0.9296\n",
+            "Epoch 16/18\n",
+            "29/29 [==============================] - 28s 964ms/step - loss: 0.0732 - accuracy: 0.9822 - val_loss: 0.1918 - val_accuracy: 0.9437\n",
+            "Epoch 17/18\n",
+            "29/29 [==============================] - 28s 957ms/step - loss: 0.0867 - accuracy: 0.9716 - val_loss: 0.2565 - val_accuracy: 0.9014\n",
+            "Epoch 18/18\n",
+            "29/29 [==============================] - 28s 957ms/step - loss: 0.0619 - accuracy: 0.9876 - val_loss: 0.2003 - val_accuracy: 0.9296\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read new images and save the true labels in a numpy array (0 - glaucoma, 1 - normal)"
+      ],
+      "metadata": {
+        "id": "jtlMO7-5UKNf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_drive = "
+      ],
+      "metadata": {
+        "id": "6vi_pvDAS8CJ"
       },
       "execution_count": null,
       "outputs": []
