Add reading of Kaggle images & predictions

--- a/3-simple-CNN-model.ipynb
+++ b/3-simple-CNN-model.ipynb
@@ -8,18 +8,18 @@
       ],
       "metadata": {
         "id": "IX8ptKk2zVdr",
-        "outputId": "6c53653c-3de2-411c-d18f-49d849e145ff",
+        "outputId": "3e79793f-c52e-4fe7-81ee-82c5052164e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "Tnk_s47oznbb"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2005,10 +2005,10 @@
       ],
       "metadata": {
         "id": "wilNo0N8coni",
-        "outputId": "565e463d-e197-40dc-a4ee-fc3ab09a2d6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "565e463d-e197-40dc-a4ee-fc3ab09a2d6b"
       },
       "execution_count": 10,
       "outputs": [
@@ -2157,23 +2157,73 @@
     {
       "cell_type": "code",
       "source": [
-        "# Read new images and save the true labels in a numpy array (0 - glaucoma, 1 - normal)"
+        "test_dir = os.path.join(drive, \"testing_data\")\n",
+        "g_test_dir = os.path.join(test_dir, \"glaucoma\")\n",
+        "n_test_dir = os.path.join(test_dir, \"normal\")"
       ],
       "metadata": {
-        "id": "jtlMO7-5UKNf"
+        "id": "6vi_pvDAS8CJ"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "test_drive = "
+        "# Read new images and save the true labels in a numpy array (0 - glaucoma, 1 - normal)\n",
+        "import numpy as np\n",
+        "import PIL\n",
+        "\n",
+        "def get_images_and_labels(directory):\n",
+        "  X = []\n",
+        "  y = []\n",
+        "\n",
+        "  files = os.listdir(directory)\n",
+        "  for i, file in enumerate(files):\n",
+        "    file_path = os.path.join(directory, file)\n",
+        "    image = tf.keras.preprocessing.image.load_img(file_path)\n",
+        "    image_data = tf.keras.preprocessing.image.img_to_array(image)\n",
+        "    image_data = tf.keras.preprocessing.image.smart_resize(image_data, (178, 178))\n",
+        "    X.append(image_data)    \n",
+        "\n",
+        "    if directory.split(\"/\")[-1] == \"glaucoma\":\n",
+        "      y.append(0)\n",
+        "    elif directory.split(\"/\")[-1] == \"normal\":\n",
+        "      y.append(0)\n",
+        "\n",
+        "  X = np.array(X)\n",
+        "  y = np.array(y)\n",
+        "\n",
+        "  return X, y"
       ],
       "metadata": {
-        "id": "6vi_pvDAS8CJ"
+        "id": "j_6_s6MFVJ1r"
       },
-      "execution_count": null,
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_g, y_g = get_images_and_labels(g_test_dir)\n",
+        "X_n, y_n = get_images_and_labels(n_test_dir)"
+      ],
+      "metadata": {
+        "id": "XJz3psnOX4Pe"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_g_pred = model.predict(X_g, batch_size=20)\n",
+        "y_n_pred = model.predict(X_n, batch_size=20)"
+      ],
+      "metadata": {
+        "id": "yXigGLfCf_JM"
+      },
+      "execution_count": 59,
       "outputs": []
     }
   ],
