--- a/3-simple-CNN-model.ipynb
+++ b/3-simple-CNN-model.ipynb
@@ -2224,11 +2224,11 @@
         "print(y_n.shape)"
       ],
       "metadata": {
-        "id": "hDaCvtjzi9y1",
-        "outputId": "31c95372-7465-4562-b429-7689eb088970",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hDaCvtjzi9y1",
+        "outputId": "31c95372-7465-4562-b429-7689eb088970"
       },
       "execution_count": 71,
       "outputs": [
@@ -2256,11 +2256,11 @@
         "print(y_test_pred.shape)"
       ],
       "metadata": {
-        "id": "FO5rTJQUkVDE",
-        "outputId": "0f3cd5e3-3247-4f87-9cd7-00c6e913562c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FO5rTJQUkVDE",
+        "outputId": "0f3cd5e3-3247-4f87-9cd7-00c6e913562c"
       },
       "execution_count": 81,
       "outputs": [
@@ -2291,12 +2291,12 @@
         "print(\"Normal prediction accuracy:\", normal, \"%\")"
       ],
       "metadata": {
-        "id": "ItnFFKSgihY6",
-        "outputId": "a1318b28-e6d2-403d-ea0c-4a7c14513f57",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 301
-        }
+        },
+        "id": "ItnFFKSgihY6",
+        "outputId": "a1318b28-e6d2-403d-ea0c-4a7c14513f57"
       },
       "execution_count": 82,
       "outputs": [
@@ -2321,6 +2321,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 3.4. Conclusions\n",
+        "\n",
+        "We see that the prediction accuracy for glaucoma is extremely low, suggesting that:\n",
+        "* the model is overfitting the training data\n",
+        "- the resizing of the evaluation data is discarding important features\n",
+        "\n",
+        "To mitigate this, we'll also try training the model on the Kaggle data and testing it on the ACRIMA dataset, as the first has higher resolution images."
+      ],
+      "metadata": {
+        "id": "mWL5hv4OnFYg"
+      }
     }
   ],
   "metadata": {
