Changes to notebook

--- a/3-simple-CNN-model-acrima-training.ipynb
+++ b/3-simple-CNN-model-acrima-training.ipynb
@@ -177,17 +177,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ELdRaB4UF6YZ"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "w3BjKKDnzAb0"
@@ -1884,8 +1873,8 @@
       },
       "outputs": [],
       "source": [
-        "X_g, y_g = get_testing_data([kaggle_g_train_dir, kaggle_g_val_dir])\n",
-        "X_n, y_n = get_testing_data([kaggle_n_train_dir, kaggle_n_val_dir])\n",
+        "X_g, y_g = get_testing_data([kaggle_g_train_dir, kaggle_g_val_dir], (178, 178))\n",
+        "X_n, y_n = get_testing_data([kaggle_n_train_dir, kaggle_n_val_dir], (178, 178))\n",
         "\n",
         "y_g_pred = model.predict(X_g, batch_size=20)\n",
         "y_n_pred = model.predict(X_n, batch_size=20)"
