--- a/3-simple-CNN-model-acrima-training.ipynb
+++ b/3-simple-CNN-model-acrima-training.ipynb
@@ -2,20 +2,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IX8ptKk2zVdr",
-        "outputId": "3e79793f-c52e-4fe7-81ee-82c5052164e3"
+        "outputId": "d5a7c8d7-7419-4e00-f75d-c02d284b9602"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "qs9Qmxb_zAbm"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "Tnk_s47oznbb"
       },
@@ -63,7 +63,7 @@
         "acrima_dir = os.path.join(drive, \"acrima_dataset\")\n",
         "\n",
         "# Save directory paths\n",
-        "train_dir = os.path.join(acrima_dir, \"train\")\n",
+        "train_dir = os.path.join(acrima_dir, \"training\")\n",
         "val_dir = os.path.join(acrima_dir, \"validation\")\n",
         "g_train_dir = os.path.join(train_dir, \"glaucoma\")\n",
         "g_val_dir = os.path.join(val_dir, \"glaucoma\")\n",
@@ -125,18 +125,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "U_rRlYUdzAbu",
-        "outputId": "7c01902e-11e3-4ff0-9282-ec6cc22a83cd"
+        "outputId": "995cdfd3-8d7c-41a4-9297-5bf17b985081"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Found 563 images belonging to 2 classes.\n",
             "Found 142 images belonging to 2 classes.\n"
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "jX_EAjo_zAbz"
       },
@@ -1776,55 +1776,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDFQN5rJc3Hc",
-        "outputId": "175f48a3-d8c2-4bb1-d558-35db9f0ccc4c"
+        "outputId": "fc0a9b22-882b-4a90-a55d-3d7fff3d03ae"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Epoch 1/18\n",
-            "29/29 [==============================] - 33s 1s/step - loss: 2.0443 - accuracy: 0.5613 - val_loss: 0.5434 - val_accuracy: 0.7324\n",
+            "29/29 [==============================] - 107s 4s/step - loss: 2.5338 - accuracy: 0.5506 - val_loss: 0.4624 - val_accuracy: 0.8451\n",
             "Epoch 2/18\n",
-            "29/29 [==============================] - 28s 949ms/step - loss: 0.4979 - accuracy: 0.7762 - val_loss: 0.4103 - val_accuracy: 0.8169\n",
+            "29/29 [==============================] - 44s 2s/step - loss: 0.4123 - accuracy: 0.8259 - val_loss: 0.4309 - val_accuracy: 0.7887\n",
             "Epoch 3/18\n",
-            "29/29 [==============================] - 28s 970ms/step - loss: 0.4021 - accuracy: 0.8171 - val_loss: 0.3778 - val_accuracy: 0.8380\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.3506 - accuracy: 0.8490 - val_loss: 0.2956 - val_accuracy: 0.8732\n",
             "Epoch 4/18\n",
-            "29/29 [==============================] - 28s 961ms/step - loss: 0.3426 - accuracy: 0.8508 - val_loss: 0.3260 - val_accuracy: 0.8380\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.3190 - accuracy: 0.8703 - val_loss: 0.4041 - val_accuracy: 0.8169\n",
             "Epoch 5/18\n",
-            "29/29 [==============================] - 28s 963ms/step - loss: 0.3235 - accuracy: 0.8615 - val_loss: 0.2940 - val_accuracy: 0.8662\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.3086 - accuracy: 0.8757 - val_loss: 0.2486 - val_accuracy: 0.8873\n",
             "Epoch 6/18\n",
-            "29/29 [==============================] - 29s 1s/step - loss: 0.2877 - accuracy: 0.8615 - val_loss: 0.4145 - val_accuracy: 0.8239\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.2408 - accuracy: 0.9023 - val_loss: 0.2852 - val_accuracy: 0.8732\n",
             "Epoch 7/18\n",
-            "29/29 [==============================] - 28s 961ms/step - loss: 0.2639 - accuracy: 0.8792 - val_loss: 0.2503 - val_accuracy: 0.8873\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.2151 - accuracy: 0.9201 - val_loss: 0.1986 - val_accuracy: 0.9296\n",
             "Epoch 8/18\n",
-            "29/29 [==============================] - 28s 955ms/step - loss: 0.2120 - accuracy: 0.9112 - val_loss: 0.2720 - val_accuracy: 0.8944\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.1836 - accuracy: 0.9343 - val_loss: 0.2119 - val_accuracy: 0.9225\n",
             "Epoch 9/18\n",
-            "29/29 [==============================] - 28s 956ms/step - loss: 0.1997 - accuracy: 0.9272 - val_loss: 0.2276 - val_accuracy: 0.9085\n",
+            "29/29 [==============================] - 43s 1s/step - loss: 0.1947 - accuracy: 0.9218 - val_loss: 0.1788 - val_accuracy: 0.9296\n",
             "Epoch 10/18\n",
-            "29/29 [==============================] - 28s 960ms/step - loss: 0.1681 - accuracy: 0.9343 - val_loss: 0.2423 - val_accuracy: 0.8944\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.1489 - accuracy: 0.9503 - val_loss: 0.1698 - val_accuracy: 0.9296\n",
             "Epoch 11/18\n",
-            "29/29 [==============================] - 28s 953ms/step - loss: 0.1435 - accuracy: 0.9503 - val_loss: 0.2495 - val_accuracy: 0.8873\n",
+            "29/29 [==============================] - 42s 1s/step - loss: 0.1419 - accuracy: 0.9485 - val_loss: 0.1958 - val_accuracy: 0.9225\n",
             "Epoch 12/18\n",
-            "29/29 [==============================] - 28s 954ms/step - loss: 0.1273 - accuracy: 0.9556 - val_loss: 0.2054 - val_accuracy: 0.9155\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.1077 - accuracy: 0.9591 - val_loss: 0.1663 - val_accuracy: 0.9366\n",
             "Epoch 13/18\n",
-            "29/29 [==============================] - 28s 955ms/step - loss: 0.1056 - accuracy: 0.9698 - val_loss: 0.2564 - val_accuracy: 0.8944\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.1111 - accuracy: 0.9574 - val_loss: 0.1890 - val_accuracy: 0.9155\n",
             "Epoch 14/18\n",
-            "29/29 [==============================] - 28s 959ms/step - loss: 0.0963 - accuracy: 0.9751 - val_loss: 0.1875 - val_accuracy: 0.9437\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.0952 - accuracy: 0.9645 - val_loss: 0.2157 - val_accuracy: 0.9155\n",
             "Epoch 15/18\n",
-            "29/29 [==============================] - 28s 959ms/step - loss: 0.0815 - accuracy: 0.9787 - val_loss: 0.2214 - val_accuracy: 0.9296\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.0926 - accuracy: 0.9645 - val_loss: 0.1620 - val_accuracy: 0.9437\n",
             "Epoch 16/18\n",
-            "29/29 [==============================] - 28s 964ms/step - loss: 0.0732 - accuracy: 0.9822 - val_loss: 0.1918 - val_accuracy: 0.9437\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.0778 - accuracy: 0.9698 - val_loss: 0.2172 - val_accuracy: 0.9085\n",
             "Epoch 17/18\n",
-            "29/29 [==============================] - 28s 957ms/step - loss: 0.0867 - accuracy: 0.9716 - val_loss: 0.2565 - val_accuracy: 0.9014\n",
+            "29/29 [==============================] - 41s 1s/step - loss: 0.0748 - accuracy: 0.9716 - val_loss: 0.1499 - val_accuracy: 0.9437\n",
             "Epoch 18/18\n",
-            "29/29 [==============================] - 28s 957ms/step - loss: 0.0619 - accuracy: 0.9876 - val_loss: 0.2003 - val_accuracy: 0.9296\n"
+            "29/29 [==============================] - 41s 1s/step - loss: 0.0753 - accuracy: 0.9751 - val_loss: 0.2050 - val_accuracy: 0.9155\n"
           ]
         }
       ],
@@ -1987,17 +1987,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The very low accuracy in glaucoma detection is likely due to the differences in the training & testing images. For example, the testing dataset images have a black background which potentially skews the results of the model. Similarly, we notice that the ACRIMA dataset has the images centred around the optic nerve head / optic disc (the circle in the middle). Therefore, we'll crop the images so they more closely resemble our training dataset."
+      ],
+      "metadata": {
+        "id": "B_OMvf0NLAUM"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "mWL5hv4OnFYg"
       },
       "source": [
-        "#### 3.4. Conclusions\n",
-        "\n",
-        "We see that the prediction accuracy for glaucoma is extremely low, suggesting that:\n",
-        "* the model is overfitting the training data\n",
-        "- the resizing of the evaluation data is discarding important features\n",
-        "\n",
-        "To mitigate this, we'll also try training the model on the Kaggle data and testing it on the ACRIMA dataset, as the first has higher resolution images."
+        "#### 3.4. Conclusions"
       ]
     }
   ],
