--- a/3-simple-CNN-model-acrima-training.ipynb
+++ b/3-simple-CNN-model-acrima-training.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "qs9Qmxb_zAbm"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Tnk_s47oznbb"
       },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,8 +135,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Found 563 images belonging to 2 classes.\n",
             "Found 142 images belonging to 2 classes.\n"
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "id": "jX_EAjo_zAbz"
       },
@@ -1776,55 +1776,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yDFQN5rJc3Hc",
-        "outputId": "fc0a9b22-882b-4a90-a55d-3d7fff3d03ae"
+        "outputId": "03b0b0f0-8947-465c-f8f6-36a183b6a744"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Epoch 1/18\n",
-            "29/29 [==============================] - 107s 4s/step - loss: 2.5338 - accuracy: 0.5506 - val_loss: 0.4624 - val_accuracy: 0.8451\n",
+            "29/29 [==============================] - 338s 12s/step - loss: 1.1223 - accuracy: 0.7087 - val_loss: 0.4290 - val_accuracy: 0.8028\n",
             "Epoch 2/18\n",
-            "29/29 [==============================] - 44s 2s/step - loss: 0.4123 - accuracy: 0.8259 - val_loss: 0.4309 - val_accuracy: 0.7887\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.3881 - accuracy: 0.8277 - val_loss: 0.3250 - val_accuracy: 0.8451\n",
             "Epoch 3/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.3506 - accuracy: 0.8490 - val_loss: 0.2956 - val_accuracy: 0.8732\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.3282 - accuracy: 0.8579 - val_loss: 0.2792 - val_accuracy: 0.8521\n",
             "Epoch 4/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.3190 - accuracy: 0.8703 - val_loss: 0.4041 - val_accuracy: 0.8169\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.2795 - accuracy: 0.8970 - val_loss: 0.2596 - val_accuracy: 0.8873\n",
             "Epoch 5/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.3086 - accuracy: 0.8757 - val_loss: 0.2486 - val_accuracy: 0.8873\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.2480 - accuracy: 0.8970 - val_loss: 0.2661 - val_accuracy: 0.8873\n",
             "Epoch 6/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.2408 - accuracy: 0.9023 - val_loss: 0.2852 - val_accuracy: 0.8732\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.2131 - accuracy: 0.9290 - val_loss: 0.1953 - val_accuracy: 0.9296\n",
             "Epoch 7/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.2151 - accuracy: 0.9201 - val_loss: 0.1986 - val_accuracy: 0.9296\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.1943 - accuracy: 0.9272 - val_loss: 0.2763 - val_accuracy: 0.8803\n",
             "Epoch 8/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.1836 - accuracy: 0.9343 - val_loss: 0.2119 - val_accuracy: 0.9225\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.1546 - accuracy: 0.9485 - val_loss: 0.2631 - val_accuracy: 0.8732\n",
             "Epoch 9/18\n",
-            "29/29 [==============================] - 43s 1s/step - loss: 0.1947 - accuracy: 0.9218 - val_loss: 0.1788 - val_accuracy: 0.9296\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.1329 - accuracy: 0.9574 - val_loss: 0.1603 - val_accuracy: 0.9225\n",
             "Epoch 10/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.1489 - accuracy: 0.9503 - val_loss: 0.1698 - val_accuracy: 0.9296\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.1204 - accuracy: 0.9627 - val_loss: 0.1813 - val_accuracy: 0.9366\n",
             "Epoch 11/18\n",
-            "29/29 [==============================] - 42s 1s/step - loss: 0.1419 - accuracy: 0.9485 - val_loss: 0.1958 - val_accuracy: 0.9225\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.1174 - accuracy: 0.9574 - val_loss: 0.1849 - val_accuracy: 0.9437\n",
             "Epoch 12/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.1077 - accuracy: 0.9591 - val_loss: 0.1663 - val_accuracy: 0.9366\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0993 - accuracy: 0.9716 - val_loss: 0.2159 - val_accuracy: 0.9225\n",
             "Epoch 13/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.1111 - accuracy: 0.9574 - val_loss: 0.1890 - val_accuracy: 0.9155\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0749 - accuracy: 0.9751 - val_loss: 0.2408 - val_accuracy: 0.9085\n",
             "Epoch 14/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.0952 - accuracy: 0.9645 - val_loss: 0.2157 - val_accuracy: 0.9155\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0823 - accuracy: 0.9698 - val_loss: 0.2800 - val_accuracy: 0.8873\n",
             "Epoch 15/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.0926 - accuracy: 0.9645 - val_loss: 0.1620 - val_accuracy: 0.9437\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0638 - accuracy: 0.9858 - val_loss: 0.1835 - val_accuracy: 0.9155\n",
             "Epoch 16/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.0778 - accuracy: 0.9698 - val_loss: 0.2172 - val_accuracy: 0.9085\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0489 - accuracy: 0.9911 - val_loss: 0.1903 - val_accuracy: 0.9155\n",
             "Epoch 17/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.0748 - accuracy: 0.9716 - val_loss: 0.1499 - val_accuracy: 0.9437\n",
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0821 - accuracy: 0.9716 - val_loss: 0.1688 - val_accuracy: 0.9366\n",
             "Epoch 18/18\n",
-            "29/29 [==============================] - 41s 1s/step - loss: 0.0753 - accuracy: 0.9751 - val_loss: 0.2050 - val_accuracy: 0.9155\n"
+            "29/29 [==============================] - 45s 2s/step - loss: 0.0917 - accuracy: 0.9645 - val_loss: 0.1899 - val_accuracy: 0.9296\n"
           ]
         }
       ],
@@ -1847,6 +1847,22 @@
         "                    verbose=1,\n",
         "                    validation_data=val_gen)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save trained model architecture and weights\n",
+        "json_model = model.to_json()\n",
+        "with open('model.json', 'w') as outfile:\n",
+        "    outfile.write(json_model)\n",
+        "\n",
+        "model.save_weights(\"simple_model_weights.h5\")"
+      ],
+      "metadata": {
+        "id": "LMXJw1j3FSOJ"
+      },
+      "execution_count": 19,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1975,7 +1991,6 @@
         "import seaborn as sns\n",
         "from sklearn.metrics import confusion_matrix\n",
         "\n",
-        "\n",
         "cm = confusion_matrix(y_test, y_test_pred)\n",
         "sns.heatmap(cm, annot=True, fmt='g', xticklabels=[\"glaucoma\", \"normal\"], \\\n",
         "    yticklabels=[\"glaucoma\", \"normal\"])\n",
@@ -1988,12 +2003,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "B_OMvf0NLAUM"
-      },
       "source": [
         "The very low accuracy in glaucoma detection is likely due to the differences in the training & testing images. For example, the testing dataset images have a black background which potentially skews the results of the model. Similarly, we notice that the ACRIMA dataset has the images centred around the optic nerve head / optic disc (the circle in the middle). Therefore, we'll crop the images so they more closely resemble our training dataset."
-      ]
+      ],
+      "metadata": {
+        "id": "B_OMvf0NLAUM"
+      }
     },
     {
       "cell_type": "markdown",
